fixed spacing in home page-root"/"

--- a/client/styles/CreateInspo.module.scss
+++ b/client/styles/CreateInspo.module.scss
@@ -77,7 +77,7 @@ $dark-jungle-green: #041910ff;
   .right {
     //align-items: flex-start;
     margin: 0;
-    transform: translateY(30%);
+    transform: translateY(25%);
     //width: 100%
     height: fit-content;
     min-width: 330px;
