--- a/client/styles/Root.module.scss
+++ b/client/styles/Root.module.scss
@@ -7,7 +7,8 @@ $phthalo-green: #052E26ff;
 $dark-jungle-green: #041910ff;
 .hero {
     width: 100%;
-    height: 88vh;
+    //min-height: 88vh;
+    //height: fit-content;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -17,6 +18,7 @@ $dark-jungle-green: #041910ff;
     display: flex;
     width: 100%;
     height: 88vh;
+    //height: fit-content;
     object-fit: cover;
 }
 .overlay {
@@ -29,7 +31,7 @@ $dark-jungle-green: #041910ff;
 .header {
     position: absolute;
     top: 15vh;
-    font-size: 3.5em;
+    font-size: 3rem;
     text-align: center;
     margin: 0 auto;
     padding: 0 10px;
@@ -38,9 +40,10 @@ $dark-jungle-green: #041910ff;
 }
 .tagline {
     position: relative;
+    line-height: 1.5em;
     text-align: center;
     width: 100%;
-    font-size: 0.5em;
+    font-size: 0.4em;
     font-weight: 300 ;
     margin:0;
     color: rgb(241, 241, 241);
